<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">声昔</string>
    <string name="string_home">首页</string>
    <string name="string_echoes">信箱</string>
    <string name="string_listen">社团</string>
    <string name="string_me">我的</string>
    <string name="notification_error_ssl_cert_invalid">SSL证书无效,是否继续访问？</string>
    <string name="string_confirm">确定</string>
    <string name="string_cancel">取消</string>
    <string name="string_loginAct_1">就&#160;是&#160;喜&#160;欢&#160;听&#160;你&#160;说&#160;话</string>
    <string name="string_loginAct_2">请输入手机号</string>
    <string name="string_loginAct_3">登 录</string>
    <string name="string_loginAct_4">第一次用声昔？ </string>
    <string name="string_loginAct_5">注册</string>
    <string name="string_loginAct_6">或使用以下方式一键登录</string>
    <string name="string_loginAct_7">我已阅读并同意</string>
    <string name="string_loginAct_8">声昔使用协议</string>
    <string name="string_signAct_1">新用户注册</string>
    <string name="string_signAct_2">请输入您的手机号</string>
    <string name="string_signAct_3">确 定</string>
    <string name="string_verifyAct_1">请输入验证码</string>
    <string name="string_verifyAct_2">重新发送</string>
    <string name="string_verifyAct_3">验证码已发送至  %1$s</string>
    <string name="string_Next_step">下一步</string>
    <string name="string_signNameAct_1">倒数第二步：输入名字</string>
    <string name="string_signNameAct_2">最多输入10个字</string>
    <string name="string_signNameAct_3">为我随机取个名字</string>
    <string name="string_signRecordAct_1">最后，录制内心的小期待</string>
    <string name="string_signRecordAct_2">说说此刻心情，也可以说</string>
    <string name="string_signRecordAct_3">Hello，世界</string>
    <string name="string_signRecordAct_4">按住说话</string>
    <string name="string_signRecordAct_5">长按圆形按钮开始录音，松开结束</string>
    <string name="string_signRecordAct_6">已达到最大录制时间</string>
    <string name="string_signRecordAct_7">请长按按钮录制声音</string>
    <string name="string_home_1">附近</string>
    <string name="string_friend">室友</string>
    <string name="string_home_3">操场</string>
    <string name="string_Just">刚刚</string>
    <string name="string_minute_ago">分钟前</string>
    <string name="string_hour_ago">小时前</string>
    <string name="string_yesterday">昨天</string>
    <string name="string_share_world">共享到操场</string>
    <string name="string_unshare_world">从操场撤回</string>
    <string name="string_unShare_Success">声昔已从操场下线</string>
    <string name="string_gongming">点亮</string>
    <string name="string_echoing">回声</string>
    <string name="string_more">更多</string>
    <string name="string_Talks">对话</string>
    <string name="string_Share_wechat">分享到微信</string>
    <string name="string_Share_wechat_Friend">微信室友</string>
    <string name="string_Share_wechat_Moments">朋友圈</string>
    <string name="string_Share_Weibo">分享到微博</string>
    <string name="string_Share_QQ">分享到QQ</string>
    <string name="string_Share_QQ_Friends">QQ室友</string>
    <string name="string_Share_QQ_Zone">QQ空间</string>
    <string name="string_Delete">删除</string>
    <string name="string_Listener">收听</string>
    <string name="string_Cancel">取消</string>
    <string name="string_pending">等待通过</string>
    <string name="string_Report">屏蔽</string>
    <string name="string_report_success">举报成功</string>
    <string name="string_echo_Success">回声成功</string>
    <string name="string_other_privacy_hint">由于对方的隐私设置，暂时不能进行该操作</string>
    <string name="string_other_black_hint">由于你已经拉黑了对方，暂时不能进行该操作</string>
    <string name="string_system_info">系统消息</string>
    <string name="string_warn">您在声昔发布的内容涉及违反 《声昔使用协议》 请自觉删除涉及人身攻击或违反国家政策法规的内容。多次违反声昔协议的账号将被封停， 感谢您的配合</string>
    <string name="string_I_got">我知道了</string>
    <string name="string_delete_voice">是否删除该条声昔？</string>
    <string name="string_error_file">路径错误</string>
    <string name="share_count_no_more">今日%1$s次共享机会已经用完啦</string>
    <string name="share_count_reset">共享机会每日0点自动重置</string>
    <string name="string_details_title">详细资料</string>
    <string name="string_invalidate">邀请</string>
    <string name="string_frequency">声昔学号：</string>
    <string name="string_wave">个性语音签名</string>
    <string name="string_record_wave">重录</string>
    <string name="string_album">相册</string>
    <string name="string_setting">设置</string>
    <string name="string_custom_chat">客服聊天</string>
    <string name="string_add_Friend">加室友</string>
    <string name="string_Chat">私聊</string>
    <string name="string_anonymous">表白声音</string>
    <string name="string_My_Friends">我的室友</string>
    <string name="string_is_addBlock">确定将对方拉黑？</string>
    <string name="string_has_friend">已是室友</string>
    <string name="string_chat_Limit_friend">私聊限室友</string>
    <string name="string_admire_Just_once">每天可以表白一次 今天已经表白过啦</string>
    <string name="string_admire_Succes">匿名表白成功</string>
    <string name="string_cancel_publish">确定要放弃发布吗？</string>
    <string name="string_cancel_result">放弃后内容不会被保存</string>
    <string name="string_clear_chat_list">清空聊天记录？</string>
    <string name="string_add_Black">拉黑</string>
    <string name="string_cancel_black">取消拉黑</string>
    <string name="string_delete_Talks">是否删除该对话？</string>
    <string name="string_delete_Friend_hint">删除室友将同时删除与该\n室友的回声和聊天记录</string>
    <string name="string_delete_Friend">删除室友</string>
    <string name="string_remark">备注</string>
    <string name="string_check_clear_chat_list">确定清空聊天记录？</string>
    <string name="string_report_attack">人身攻击</string>
    <string name="string_report_porn">色情暴力</string>
    <string name="string_report_ad">垃圾广告</string>
    <string name="string_report_illegal">违反舍规：不抬杠·不反驳·不约</string>
    <string name="string_camera">拍照</string>
    <string name="string_selected_photo">从手机相册选择</string>
    <string name="string_save_pic">保存图片</string>
    <string name="string_share_world_hint">共享到操场 让更多人听到</string>
    <string name="string_share_Count_desc">今天仅有%1$s次共享机会哦</string>
    <string name="string_share_now">马上共享</string>
    <string name="string_new">最新</string>
    <string name="string_hot">最热</string>
    <string name="string_up_share_world_hint">将这条声昔从操场下线？</string>
    <string name="string_new_Version">发现新版本!请及时更新</string>
    <string name="string_update_now">立即更新</string>
    <string name="string_lock_Account">该账号已被封,如有疑问请到请到www.byebyetext.com咨询</string>
    <string name="string_look_conversion">查看%1$s条对话</string>
    <string name="string_empty_friend">还没有室友,快去看看附近的人吧</string>
    <string name="string_view_nearby">查看附近的人</string>
    <string name="string_new_user_empty_voice">初来乍到，快去听听附近的声音吧</string>
    <string name="string_photo_show_there">你的图片在这里显示</string>
    <string name="string_record_first_voice">录制第一条声昔</string>
    <string name="string_empty_search_movies">暂时没有相关电影词条\n换个关键字试试吧</string>
    <string name="string_off_line">当前网络暂不可用\n请检查你的网络设置</string>
    <string name="string_topic_empty">暂时没有相关内容\n换个关键字试试吧</string>
    <string name="string_load_more">加载更多</string>
    <string name="string_loading_more">正在加载</string>
    <string name="string_load_empty">没有更多数据</string>
    <string name="string_dynamicAct_LongLick">长按回声可以删除对话或举报哦</string>
    <string name="string_dynamicAct_1">以下回声均为私密，每个人只能看到自己和你的对话</string>
    <string name="string_skip">跳过</string>
    <string name="string_enter">进入声昔</string>
    <string name="string_select_country">选择国家和地区</string>
    <string name="string_no_empty_phone">手机号不能为空</string>
    <string name="string_approved_friend">通过了你的室友请求</string>
    <string name="string_received_admire">点亮了你的心情</string>
    <string name="string_received_anonymous">有人偷偷表白了你的声音哦</string>
    <string name="string_received_anonymous_1">有人表白了你的声音！</string>
    <string name="string_msg_notice">点亮提醒</string>
    <string name="string_new_friend_request">新室友请求</string>
    <string name="string_System">系统消息</string>
    <string name="string_Custom">客服</string>
    <string name="string_voice_time_info">在%1$s的声昔</string>
    <string name="string_talkAct_voice_privacy">该对话仅你和对方可见</string>
    <string name="string_all_hot_Movies">全部热门电影</string>
    <string name="string_create_new_topic">生成新的话题</string>
    <string name="string_topic_count">%1$s条声昔</string>
    <string name="string_topic_max_length">话题最多输入15个字</string>
    <string name="string_more_history">更多搜索记录</string>
    <string name="string_topic_hot">热门话题</string>
    <string name="string_cike">你是谁</string>
    <string name="string_publich_cike">发此刻</string>
    <string name="string_cike_hint">你在这发布的声昔都是匿名的哦\n发布1分钟后将自动销毁，声过无痕~</string>
    <string name="string_cike_anonymous">匿名用户</string>
    <string name="string_cile_destroy">1分钟后 自动销毁</string>
    <string name="string_search_hot_topic">搜索热门话题</string>
    <string name="string_movies_comments">电影社</string>
    <string name="string_friends_broad">室友榜</string>
    <string name="string_Movies">电影</string>
    <string name="string_Movies_hot">热门影片</string>
    <string name="string_movies_findAll">查看全部</string>
    <string name="string_movies_search">搜电影</string>
    <string name="string_movies_allBoard">榜单</string>
    <string name="string_movies_user_comments">用户电影心情</string>
    <string name="string_sort">排序</string>
    <string name="string_movies_user_comment">声昔用户评分</string>
    <string name="string_movies_bang">电影榜</string>
    <string name="string_movies_comments_bang">影评榜</string>
    <string name="string_movies_connversion_count">%1$s条影评</string>
    <string name="string_movies_details">电影词条</string>
    <string name="string_movies_publish_conversion">标记这部电影</string>
    <string name="string_movies_publish">发影评</string>
    <string name="string_movies_search_hot">搜索热门电影</string>
    <string name="string_topic_search_count">共%1$s条心情 包含此话题</string>
    <string name="string_LocationServer">距离功能</string>
    <string name="string_statue_on">开启</string>
    <string name="string_location_hint">开启此功能的用户可以通过（附近的人）发现彼此</string>
    <string name="string_statue_off">关闭</string>
    <string name="string_nearby_user">附近</string>
    <string name="string_theme_title_1">气氛·Atmosphere·雰囲気</string>
    <string name="string_theme_title_2">白天/夜间:</string>
    <string name="string_theme_title_3">白天</string>
    <string name="string_theme_title_31">黑夜</string>
    <string name="string_theme_title_4">气氛:</string>
    <string name="string_theme_title_5">无</string>
    <string name="string_theme_title_6">雨</string>
    <string name="string_theme_title_7">雪</string>
    <string name="string_theme_title_8">叶</string>
    <string name="string_theme_title_9">花</string>
    <string name="string_book_8">读书社</string>
    <string name="string_music_title">音乐社</string>
    <string name="string_report_normal">举报</string>
    <string name="string_dialog_change_set_3">加入白名单</string>
    <string name="string_admin_warn">发警告</string>
    <string name="string_admin_limit">关禁闭</string>
    <string name="string_admin_injury">设为仙人掌</string>
    <string name="string_admin_close">封 号</string>
    <string name="string_show">显示</string>
    <string name="string_privacy_topic_setting_2">话题搜索结果是否显示我的心情</string>
    <string name="string_dialog_check_season_album_1">请选择一种预览视角:</string>
    <string name="string_dialog_check_season_album_2">非室友视角</string>
    <string name="string_dialog_check_season_album_3">室友视角</string>
    <string name="string_maple_lelf">枫</string>
    <string name="string_auto_on">自启动管理</string>
    <string name="string_system_white_list">系统白名单</string>
    <string name="string_electric_power">Android60电池优化</string>
    <string name="string_background_dialog">开启所显示和后台弹出界面</string>
    <string name="string_auto_desc">请点击「去设置」,在弹出的「自启动管理」列表中,打开声昔闹钟对应的开关」</string>
    <string name="string_white_list_desc">请点击「去设置」,在弹出的列表中点击声昔,然后选择「无限制」和「允许定位」</string>
    <string name="string_electric_power_desc">请点击「去设置」,在弹出的「忽略电池优化」对话框中,点击「是」</string>
    <string name="string_background_dialog_hint">请点击「去设置」,点击「权限」,在弹出的「权限管理」界面中,请将「锁屏显示和后台弹岀界面」设为允许</string>
    <string name="string_please_open_alarm_server">请开启以下权限,确保您的闹钟服务正常运转</string>
    <string name="string_privacyAct_26">听见页隐私设置</string>
</resources>