<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorGrayContent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:background="@color/colorContentBackground"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStart="0dp">

            <ImageView
                android:id="@+id/btn_Back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="8dp"
                android:padding="4dp"
                android:src="@mipmap/icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/string_privacyAct_26"
                android:textColor="@color/colorNormalIndecator"
                android:textSize="17sp" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrayContent" />

    <org.xiaoxingqi.shengxi.wedgit.ViewMoreGroupView
        android:id="@+id/viewShake"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorContentBackground"
        android:paddingLeft="2dp"
        android:visibility="gone"
        app:title_name="@string/string_cike" />

    <org.xiaoxingqi.shengxi.wedgit.ViewMoreGroupView
        android:id="@+id/moreMovies"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorContentBackground"
        android:paddingLeft="2dp"
        app:title_name="@string/string_movies_comments" />

    <org.xiaoxingqi.shengxi.wedgit.ViewMoreGroupView
        android:id="@+id/moreBook"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorContentBackground"
        android:paddingLeft="2dp"
        app:title_name="@string/string_book_8" />

    <org.xiaoxingqi.shengxi.wedgit.ViewMoreGroupView
        android:id="@+id/moreMusic"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorContentBackground"
        android:paddingLeft="2dp"
        app:title_name="@string/string_music_title" />

    <org.xiaoxingqi.shengxi.wedgit.ViewMoreGroupView
        android:id="@+id/viewTopicVoice"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorContentBackground"
        android:paddingLeft="2dp"
        app:second_title="@string/string_show"
        app:title_name="@string/string_privacy_topic_setting_2" />

</LinearLayout>