<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/colorGrayContent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorContentBackground"
        android:gravity="center"
        android:text="@string/string_dialog_check_season_album_1"
        android:textColor="@color/colorNormalIndecator"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_stranger"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorContentBackground"
        android:gravity="center"
        android:text="@string/string_dialog_check_season_album_2"
        android:textColor="@color/colorNormalIndecator"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_friend"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorContentBackground"
        android:gravity="center"
        android:text="@string/string_dialog_check_season_album_3"
        android:textColor="@color/colorNormalIndecator"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_Cancel"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorContentBackground"
        android:gravity="center"
        android:text="@string/string_cancel"
        android:textColor="@color/colorTextGray"
        android:textSize="15sp" />
</LinearLayout>